framec_tests/language_specific/python/v3_mir/positive/forward_inline_semicolon_multi.frm
@target python

system S {
    machine:
        $A => $P {
            e() {
                => $^; a(); b()
            }
        }
        $P { }
}
