framec_tests/language_specific/python/v3_mir/negative/forward_in_if_without_parent.frm
@target python

system S {
    machine:
        $A {
            e() {
                if True:
                    => $^
            }
        }
}

